# shared-restapi

./: Cargo.toml  README.md  README.me
.github/workflows/: ci.yml
src/: adapter.rs  fixture_policy.rs  lib.rs  mock.rs
tests/: compile.rs  error_handling.rs
tests/e2e/: e2e_jsonrpc.rs
tests/trybuild/: execute-checked-entrypoint.rs  execute-checked-entrypoint.stderr  execute-entrypoint.rs  execute-entrypoint.stderr  get-entrypoint.rs  get-entrypoint.stderr  get-url-entrypoint.rs  get-url-entrypoint.stderr  non-bytes-body-entrypoint.rs  non-bytes-body-entrypoint.stderr  post-entrypoint.rs  post-entrypoint.stderr  post-json-checked-direct-entrypoint.rs  post-json-checked-direct-entrypoint.stderr  post-json-direct-entrypoint.rs  post-json-direct-entrypoint.stderr  post-json-entrypoint.rs  post-json-entrypoint.stderr  post-json-response-entrypoint.rs  post-json-response-entrypoint.stderr
