[package]
name = "shared-restapi"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
