[package]
name = "shared-restapi"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
sonic-rs = "0.5.6"
thiserror = { version = "2", default-features = false }
serde = { version = "1.0.228" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"
