[package]
name = "shared-restapi"
version = "0.1.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
e2e-tests = []

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
sonic-rs = "0.5.6"
thiserror = { version = "2", default-features = false }
serde = { version = "1.0.228" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
trybuild = "1.0"
axum = "0.8"

[[test]]
name = "e2e_jsonrpc"
path = "tests/e2e/e2e_jsonrpc.rs"
required-features = ["e2e-tests"]
